--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,24 @@
+node_modules/
+dist/
+build/
+
+# Env / secrets
+.env
+.env.local
+.env.*.local
+
+# IDEs
+.vscode/
+.idea/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 .env
 node_modules/
 .env.local
