--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.1.0",
+    "express-validator": "^7.3.0",
+    "helmet": "^8.1.0",
     "mongodb": "^6.0.0"
   },
   "devDependencies": {
